--- a/lhs hadoop/templates/hadoop-configmap.yaml
+++ b/lhs hadoop/templates/hadoop-configmap.yaml
@@ -109,6 +109,10 @@ data:
       <property>
           <name>dfs.webhdfs.enabled</name>
           <value>true</value>
+      </property>
+      <property>
+          <name>dfs.namenode.http-address</name>
+          <value>0.0.0.0:50070</value>
       </property> 
 {{- end -}}
 
