--- a/python-0.1.0/python/values.yaml
+++ b/python-0.1.0/python/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: python
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "3.9.5"
 
