--- a/python-0.1.0/python/templates/deployment.yaml
+++ b/python-0.1.0/python/templates/deployment.yaml
@@ -36,3 +36,4 @@ spec:
               port: kafka-module
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
