--- a/python-0.1.0/python/templates/deployment.yaml
+++ b/python-0.1.0/python/templates/deployment.yaml
@@ -34,8 +34,8 @@ spec:
           - "while :; do echo '.'; sleep 5 ; done"
           - "mkdir modules"
           - "cd modules"
-          - "pip kafka-python"
-          - "pip happybase"
-          - "pip json"
+          - "pip install kafka-python"
+          - "pip install happybase"
+          - "pip install flask"
           - "wget {{.Values.module.url}}"
           - "python3 app.py '{{ .Release.Name }}-kafka' '{{ .Release.Name }}-hbase-master' >> res.txt"
