--- a/python-0.1.0/python/templates/deployment.yaml
+++ b/python-0.1.0/python/templates/deployment.yaml
@@ -37,3 +37,5 @@ spec:
           - "pip install flask"
           - "wget {{.Values.module.url}}"
           - "python3 app.py '{{ .Release.Name }}-kafka' '{{ .Release.Name }}-hbase-master' >> res.txt"
+          - "-ec"
+          - "while :; do echo '.'; sleep 5 ; done"
