--- a/python-0.1.0/python/templates/deployment.yaml
+++ b/python-0.1.0/python/templates/deployment.yaml
@@ -30,5 +30,6 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           command: 
           - "/bin/bash"
-          - "/tmp/module-config/bootstrap.sh"
+          - "ec"
+          - "while :; do echo '.'; sleep 5 ; done"
 
