--- a/Collect1-0.1.0/Collect1/templates/configmap.yaml
+++ b/Collect1-0.1.0/Collect1/templates/configmap.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "Collect1.fullname" . }}
+  name: {{ include "collect1.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "Collect1.name" . }}
-    {{- include "Collect1.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "collect1.name" . }}
+    {{- include "collect1.labels" . | nindent 4 }}
 data:
   bootstrap.sh: |
     #!/bin/bash
