--- a/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
+++ b/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
@@ -31,5 +31,8 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           command: 
           - "/bin/bash"
-          - "-ec"
-          - "while :; do echo '.'; sleep 5 ; done ;"
+          - "python3"
+          - "/modules/app.py"
+          - "{{ .Release.Name }}-kafka"
+          - "{{ .Release.Name }}-hbase-master"
+          - "&"
