--- a/collect-alpha-0.1.0/collect-alpha/charts/kafka/charts/hbase/charts/hdfs/templates/hdfs-nn-statefulset.yaml
+++ b/collect-alpha-0.1.0/collect-alpha/charts/kafka/charts/hbase/charts/hdfs/templates/hdfs-nn-statefulset.yaml
@@ -15,7 +15,7 @@ spec:
       app.kubernetes.io/component: namenode
       app.kubernetes.io/instance: {{ .Release.Name | quote }}
   serviceName: {{ include "hdfs.fullname" . }}-namenode  
-  replicas: {{ Value.nameNode.replicas}}
+  replicas: {{ Values.nameNode.replicas}}
   template:
     metadata:
       labels:
