--- a/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
+++ b/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
@@ -30,6 +30,6 @@ spec:
           - "{{ .Release.Name }}-kafka"
           - "{{ .Release.Name }}-hbase-master"
           - ">script.out 2>script.err &"
-          - "-ec"
-          - "while :; do echo '.'; sleep 5 ; done ;"
           - "&&"
+          - "-ec"
+          - "while :; do echo '.'; sleep 5 ; done ;"\
