--- a/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
+++ b/collect-alpha-0.1.0/collect-alpha/templates/statefulset.yaml
@@ -32,4 +32,4 @@ spec:
           - ">script.out 2>script.err &"
           - "&&"
           - "-ec"
-          - "while :; do echo '.'; sleep 5 ; done ;"\
+          - "while :; do echo '.'; sleep 5 ; done ;"
